trendencoder val(mae=64)

--- a/test3.ipynb
+++ b/test3.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,19 +93,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53\n  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71\n  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89\n  90  91  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107\n 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125\n 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143\n 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161\n 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179\n 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197\n 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215\n 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233\n 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251\n 252 253 254 255]\n[256]\n(256, 256, 4) (256, 1, 4)\n"
+      "Model: \"trendencoder\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "inputs (InputLayer)             [(None, 32, 1)]      0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "lambda_35 (Lambda)              (None, 16, 1)        0           inputs[0][0]                     \n",
+      "__________________________________________________________________________________________________\n",
+      "lambda_36 (Lambda)              (None, 1, 1)         0           lambda_35[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "lambda_37 (Lambda)              (None, 2, 1)         0           lambda_35[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "lambda_38 (Lambda)              (None, 4, 1)         0           lambda_35[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "lambda_39 (Lambda)              (None, 8, 1)         0           lambda_35[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "lambda_40 (Lambda)              (None, 16, 1)        0           lambda_35[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "locally_connected1d_30 (Locally (None, 1, 8)         16          lambda_36[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "locally_connected1d_31 (Locally (None, 1, 8)         24          lambda_37[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "locally_connected1d_32 (Locally (None, 1, 8)         40          lambda_38[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "locally_connected1d_33 (Locally (None, 1, 8)         72          lambda_39[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "locally_connected1d_34 (Locally (None, 1, 8)         136         lambda_40[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_20 (Flatten)            (None, 8)            0           locally_connected1d_30[0][0]     \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_21 (Flatten)            (None, 8)            0           locally_connected1d_31[0][0]     \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_22 (Flatten)            (None, 8)            0           locally_connected1d_32[0][0]     \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_23 (Flatten)            (None, 8)            0           locally_connected1d_33[0][0]     \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_24 (Flatten)            (None, 8)            0           locally_connected1d_34[0][0]     \n",
+      "__________________________________________________________________________________________________\n",
+      "concatenate_4 (Concatenate)     (None, 40)           0           flatten_20[0][0]                 \n",
+      "                                                                 flatten_21[0][0]                 \n",
+      "                                                                 flatten_22[0][0]                 \n",
+      "                                                                 flatten_23[0][0]                 \n",
+      "                                                                 flatten_24[0][0]                 \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_20 (Dense)                (None, 512)          20992       concatenate_4[0][0]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dropout_4 (Dropout)             (None, 512)          0           dense_20[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_21 (Dense)                (None, 256)          131328      dropout_4[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_22 (Dense)                (None, 64)           16448       dense_21[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_23 (Dense)                (None, 8)            520         dense_22[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_24 (Dense)                (None, 1)            9           dense_23[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "outputs (Activation)            (None, 1)            0           dense_24[0][0]                   \n",
+      "==================================================================================================\n",
+      "Total params: 169,585\n",
+      "Trainable params: 169,585\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n",
+      "None\n",
+      "Размер train: 1210578\n",
+      "Размер validation: 151322\n",
+      "Размер test: 151323\n",
+      "Размер окна: 257\n",
+      "Размер входа: 256\n",
+      "Размер выхода: 1\n",
+      "Размер экземпляра: 4\n",
+      "Индексы входа: [  0   1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16  17\n",
+      "  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32  33  34  35\n",
+      "  36  37  38  39  40  41  42  43  44  45  46  47  48  49  50  51  52  53\n",
+      "  54  55  56  57  58  59  60  61  62  63  64  65  66  67  68  69  70  71\n",
+      "  72  73  74  75  76  77  78  79  80  81  82  83  84  85  86  87  88  89\n",
+      "  90  91  92  93  94  95  96  97  98  99 100 101 102 103 104 105 106 107\n",
+      " 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125\n",
+      " 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143\n",
+      " 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161\n",
+      " 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179\n",
+      " 180 181 182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197\n",
+      " 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215\n",
+      " 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230 231 232 233\n",
+      " 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251\n",
+      " 252 253 254 255]\n",
+      "Индексы выхода: [256]\n",
+      "!!!!\n"
      ]
     }
    ],
    "source": [
-    "model = trend_encoder((256, 4), units=512, sections=9)\n",
+    "model = trend_encoder((32, 1), units=2 ** 9, sections=4)\n",
     "predictor = Predictor(\n",
     "        datafile=\"datas/EURUSD_M5_20000103_20200710.csv\",\n",
     "        model=model,\n",
@@ -117,11 +203,16 @@
     "        val_ratio=0.1,\n",
     "        test_ratio=0.1,\n",
     "    )    \n",
-    "print(predictor.dataloader.input_indices)\n",
-    "print(predictor.dataloader.label_indices)\n",
+    "if(type(\"dds\")==str):\n",
+    "    print(\"!!!!\")\n",
+    "else:\n",
+    "    print(type(model))\n",
+    "# print(type(\"dddpredictor\"))\n",
+    "# print(predictor.dataloader.input_indices)\n",
+    "# print(predictor.dataloader.label_indices)\n",
     "\n",
-    "for x, y in predictor.dataloader.train.take(1):\n",
-    "    print(x.shape, y.shape)"
+    "# for x, y in predictor.dataloader.train.take(1):\n",
+    "#     print(x.shape, y.shape)"
    ]
   },
   {
@@ -197,6 +288,15 @@
     "import numpy as np\n",
     "a = np.arange(0, 64)\n",
     "[a[-2**i:] for i in range(6+1)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(True,\"djdjkdj\")"
    ]
   },
   {
