trendencoder val(mae=1.4e-4)

--- a/tests2.ipynb
+++ b/tests2.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\n",
-    "    \"datas/EURUSD_H1.csv\",\n",
+    "    \"datas/EURUSD_H1 copy.csv\",\n",
     "    sep=\"\\t\",\n",
-    "    nrows=2**16,\n",
+    "    # nrows=2**16,\n",
     "    header=0,\n",
     "    dtype={\n",
     "        \"open\": np.float32,\n",
@@ -57,39 +57,43 @@
     "    },\n",
     "    parse_dates=[[0,1]],\n",
     "    index_col=[0],\n",
-    "    names=[\"date\",\"time\",\"open\",\"high\",\"low\",\"close\",\"tickvol\",\"vol\",\"spread\"])"
+    "    names=[\"date\",\"time\",\"open\",\"high\",\"low\",\"close\",\"tickvol\",\"vol\",\"spread\"])\n",
+    "size= len(df.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(4096, 16, 1)\n"
+      "(54304,)\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "-0.7367172"
+       "0.0012349293"
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 3
     }
    ],
    "source": [
-    "prices = np.nan_to_num(np.array(df[\"open\"]), posinf=0, neginf=0).reshape((-1,16,1))\n",
-    "prices_diff = np.diff(prices[: -64])\n",
+    "width = 8\n",
+    "start = len(df.index)%width\n",
+    "prices = np.nan_to_num(np.array(df[\"open\"][start:]), posinf=0, neginf=0)\n",
+    "prices_diff = np.diff(prices[1: -64])\n",
     "print(prices.shape)\n",
-    "norm = tf.keras.layers.LayerNormalization(axis=1)\n",
-    "nx=norm(prices).numpy()\n",
-    "np.min(nx)\n",
+    "# norm = tf.keras.layers.LayerNormalization(axis=1)\n",
+    "# nx=norm(prices).numpy()\n",
+    "prices_diff.std()\n",
+    "\n",
     "# print(norm(prices).numpy())"
    ]
   },
