--- a/test5.ipynb
+++ b/test5.ipynb
@@ -39,59 +39,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[<tf.Tensor: shape=(2, 1), dtype=int64, numpy=\n",
-       " array([[ 63],\n",
-       "        [127]])>, <tf.Tensor: shape=(2, 2), dtype=int64, numpy=\n",
-       " array([[ 62,  63],\n",
-       "        [126, 127]])>, <tf.Tensor: shape=(2, 4), dtype=int64, numpy=\n",
-       " array([[ 60,  61,  62,  63],\n",
-       "        [124, 125, 126, 127]])>, <tf.Tensor: shape=(2, 8), dtype=int64, numpy=\n",
-       " array([[ 56,  57,  58,  59,  60,  61,  62,  63],\n",
-       "        [120, 121, 122, 123, 124, 125, 126, 127]])>, <tf.Tensor: shape=(2, 16), dtype=int64, numpy=\n",
-       " array([[ 48,  49,  50,  51,  52,  53,  54,  55,  56,  57,  58,  59,  60,\n",
-       "          61,  62,  63],\n",
-       "        [112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124,\n",
-       "         125, 126, 127]])>, <tf.Tensor: shape=(2, 32), dtype=int64, numpy=\n",
-       " array([[ 32,  33,  34,  35,  36,  37,  38,  39,  40,  41,  42,  43,  44,\n",
-       "          45,  46,  47,  48,  49,  50,  51,  52,  53,  54,  55,  56,  57,\n",
-       "          58,  59,  60,  61,  62,  63],\n",
-       "        [ 96,  97,  98,  99, 100, 101, 102, 103, 104, 105, 106, 107, 108,\n",
-       "         109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121,\n",
-       "         122, 123, 124, 125, 126, 127]])>, <tf.Tensor: shape=(2, 64), dtype=int64, numpy=\n",
-       " array([[  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,\n",
-       "          13,  14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,\n",
-       "          26,  27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,\n",
-       "          39,  40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51,\n",
-       "          52,  53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63],\n",
-       "        [ 64,  65,  66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76,\n",
-       "          77,  78,  79,  80,  81,  82,  83,  84,  85,  86,  87,  88,  89,\n",
-       "          90,  91,  92,  93,  94,  95,  96,  97,  98,  99, 100, 101, 102,\n",
-       "         103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115,\n",
-       "         116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127]])>]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 20
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tf.Tensor(\n[[-1.2 -0.4  0.4  1.2]\n [-1.2 -0.4  0.4  1.2]\n [-1.2 -0.4  0.4  1.2]\n [-1.2 -0.4  0.4  1.2]], shape=(4, 4), dtype=float32)\n"
+     ]
     }
    ],
    "source": [
     "sections = 6\n",
     "n = sections + 1\n",
-    "inputs = Input(shape=(2**sections,1), name=\"inputs\")\n",
+    "inputs = Input(shape=(2**sections,), name=\"inputs\")\n",
     "# x = inputs\n",
-    "l1 = Lambda(lambda z: z[:, -(2 ** sections) :])\n",
-    "l2 = [Lambda(lambda z: z[0][:, -(2 ** z[1]) :]) for i in range(n)]\n",
-    "a=np.arange(128).reshape((2,64))\n",
-    "a1=l1(a)\n",
-    "a2=[l2[i]((a1,i)) for i in range(n)]\n",
-    "a2\n"
+    "# l1 = Lambda(lambda z: z[:, -(2 ** sections) :])\n",
+    "# l2 = [Lambda(lambda z: z[0][:, -(2 ** z[1]) :]) for i in range(n)]\n",
+    "a = tf.constant(np.arange(16, dtype='float32').reshape((4,4)))\n",
+    "y = tf.nn.moments(a, axes=[1], keepdims=True)\n",
+    "z = tf.math.subtract(a,y[0])\n",
+    "w = tf.math.divide(z,y[1])\n",
+    "# print(a.numpy())\n",
+    "print(w)\n",
+    "# a1=l1(a)\n",
+    "# a2=[l2[i]((a1,i)) for i in range(n)]\n",
+    "# a2\n"
    ]
   },
   {
@@ -120,6 +94,13 @@
     ")\n",
     "print(model.summary())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
