--- a/tests2.ipynb
+++ b/tests2.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,33 +156,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "norm = tf.keras.layers.LayerNormalization(axis=1)\n",
-    "x = np.arange(256, dtype='float32').reshape((16,16,1))\n",
-    "#print(x)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[1, 2, 4, 5, 6]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 1
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tf.Tensor(\n[[[-1.6269401 ]\n  [-1.4100147 ]\n  [-1.1930895 ]\n  [-0.9761641 ]\n  [-0.7592387 ]\n  [-0.54231334]\n  [-0.32538807]\n  [-0.10846269]\n  [ 0.10846269]\n  [ 0.32538807]\n  [ 0.54231346]\n  [ 0.75923884]\n  [ 0.976164  ]\n  [ 1.1930894 ]\n  [ 1.4100147 ]\n  [ 1.6269401 ]]\n\n [[-1.6269403 ]\n  [-1.4100149 ]\n  [-1.1930895 ]\n  [-0.97616434]\n  [-0.7592387 ]\n  [-0.5423136 ]\n  [-0.32538795]\n  [-0.10846281]\n  [ 0.10846233]\n  [ 0.32538795]\n  [ 0.5423131 ]\n  [ 0.7592387 ]\n  [ 0.97616386]\n  [ 1.1930895 ]\n  [ 1.4100146 ]\n  [ 1.6269403 ]]\n\n [[-1.6269398 ]\n  [-1.4100146 ]\n  [-1.193089  ]\n  [-0.97616386]\n  [-0.75923824]\n  [-0.5423126 ]\n  [-0.32538795]\n  [-0.10846233]\n  [ 0.10846329]\n  [ 0.32538795]\n  [ 0.5423136 ]\n  [ 0.7592392 ]\n  [ 0.9761648 ]\n  [ 1.1930895 ]\n  [ 1.4100151 ]\n  [ 1.6269407 ]]\n\n [[-1.6269407 ]\n  [-1.4100151 ]\n  [-1.1930895 ]\n  [-0.97616386]\n  [-0.7592392 ]\n  [-0.5423136 ]\n  [-0.32538795]\n  [-0.10846233]\n  [ 0.10846233]\n  [ 0.32538795]\n  [ 0.5423136 ]\n  [ 0.75923824]\n  [ 0.97616386]\n  [ 1.1930895 ]\n  [ 1.4100151 ]\n  [ 1.6269398 ]]\n\n [[-1.6269398 ]\n  [-1.4100142 ]\n  [-1.1930895 ]\n  [-0.97616386]\n  [-0.75923824]\n  [-0.5423126 ]\n  [-0.32538795]\n  [-0.10846233]\n  [ 0.10846329]\n  [ 0.32538795]\n  [ 0.5423145 ]\n  [ 0.7592392 ]\n  [ 0.97616386]\n  [ 1.1930904 ]\n  [ 1.4100151 ]\n  [ 1.6269398 ]]\n\n [[-1.6269398 ]\n  [-1.4100151 ]\n  [-1.1930904 ]\n  [-0.97616386]\n  [-0.7592392 ]\n  [-0.5423126 ]\n  [-0.32538795]\n  [-0.10846329]\n  [ 0.10846329]\n  [ 0.32538795]\n  [ 0.5423126 ]\n  [ 0.7592392 ]\n  [ 0.97616386]\n  [ 1.1930885 ]\n  [ 1.4100151 ]\n  [ 1.6269398 ]]\n\n [[-1.6269417 ]\n  [-1.4100151 ]\n  [-1.1930904 ]\n  [-0.97616386]\n  [-0.7592392 ]\n  [-0.5423145 ]\n  [-0.32538795]\n  [-0.10846329]\n  [ 0.10846138]\n  [ 0.32538795]\n  [ 0.5423126 ]\n  [ 0.7592373 ]\n  [ 0.97616386]\n  [ 1.1930885 ]\n  [ 1.4100151 ]\n  [ 1.6269398 ]]\n\n [[-1.6269398 ]\n  [-1.4100132 ]\n  [-1.1930885 ]\n  [-0.97616386]\n  [-0.7592373 ]\n  [-0.5423126 ]\n  [-0.32538795]\n  [-0.10846138]\n  [ 0.10846329]\n  [ 0.32538795]\n  [ 0.5423145 ]\n  [ 0.7592392 ]\n  [ 0.9761658 ]\n  [ 1.1930904 ]\n  [ 1.4100151 ]\n  [ 1.6269417 ]]\n\n [[-1.6269398 ]\n  [-1.4100151 ]\n  [-1.1930885 ]\n  [-0.97616386]\n  [-0.7592392 ]\n  [-0.5423126 ]\n  [-0.32538795]\n  [-0.10846138]\n  [ 0.10846329]\n  [ 0.32538795]\n  [ 0.5423145 ]\n  [ 0.7592392 ]\n  [ 0.97616386]\n  [ 1.1930904 ]\n  [ 1.4100151 ]\n  [ 1.6269398 ]]\n\n [[-1.6269379 ]\n  [-1.4100132 ]\n  [-1.1930885 ]\n  [-0.97616196]\n  [-0.7592354 ]\n  [-0.5423126 ]\n  [-0.32538605]\n  [-0.10845947]\n  [ 0.10846329]\n  [ 0.32538986]\n  [ 0.54231644]\n  [ 0.7592392 ]\n  [ 0.9761658 ]\n  [ 1.1930923 ]\n  [ 1.4100151 ]\n  [ 1.6269417 ]]\n\n [[-1.6269379 ]\n  [-1.4100151 ]\n  [-1.1930885 ]\n  [-0.97616196]\n  [-0.7592392 ]\n  [-0.5423126 ]\n  [-0.32538605]\n  [-0.10845947]\n  [ 0.10846329]\n  [ 0.32538986]\n  [ 0.54231644]\n  [ 0.7592392 ]\n  [ 0.9761658 ]\n  [ 1.1930923 ]\n  [ 1.4100151 ]\n  [ 1.6269417 ]]\n\n [[-1.6269379 ]\n  [-1.4100151 ]\n  [-1.1930885 ]\n  [-0.97616196]\n  [-0.7592392 ]\n  [-0.5423126 ]\n  [-0.32538605]\n  [-0.10846329]\n  [ 0.10846329]\n  [ 0.32538986]\n  [ 0.5423126 ]\n  [ 0.7592392 ]\n  [ 0.9761658 ]\n  [ 1.1930885 ]\n  [ 1.4100151 ]\n  [ 1.6269417 ]]\n\n [[-1.6269417 ]\n  [-1.4100151 ]\n  [-1.1930885 ]\n  [-0.97616196]\n  [-0.7592392 ]\n  [-0.5423126 ]\n  [-0.32538605]\n  [-0.10846329]\n  [ 0.10846329]\n  [ 0.32538986]\n  [ 0.5423126 ]\n  [ 0.7592392 ]\n  [ 0.9761658 ]\n  [ 1.1930885 ]\n  [ 1.4100151 ]\n  [ 1.6269417 ]]\n\n [[-1.6269417 ]\n  [-1.4100151 ]\n  [-1.1930885 ]\n  [-0.9761658 ]\n  [-0.7592392 ]\n  [-0.5423126 ]\n  [-0.32538986]\n  [-0.10846329]\n  [ 0.10846329]\n  [ 0.32538605]\n  [ 0.5423126 ]\n  [ 0.7592392 ]\n  [ 0.9761658 ]\n  [ 1.1930885 ]\n  [ 1.4100151 ]\n  [ 1.6269417 ]]\n\n [[-1.6269417 ]\n  [-1.4100151 ]\n  [-1.1930885 ]\n  [-0.9761658 ]\n  [-0.7592392 ]\n  [-0.5423126 ]\n  [-0.32538986]\n  [-0.10846329]\n  [ 0.10846329]\n  [ 0.32538605]\n  [ 0.5423126 ]\n  [ 0.7592392 ]\n  [ 0.97616196]\n  [ 1.1930885 ]\n  [ 1.4100151 ]\n  [ 1.6269379 ]]\n\n [[-1.6269417 ]\n  [-1.4100151 ]\n  [-1.1930923 ]\n  [-0.9761658 ]\n  [-0.7592392 ]\n  [-0.5423126 ]\n  [-0.32538986]\n  [-0.10846329]\n  [ 0.10846329]\n  [ 0.32538605]\n  [ 0.5423126 ]\n  [ 0.7592392 ]\n  [ 0.97616196]\n  [ 1.1930885 ]\n  [ 1.4100151 ]\n  [ 1.6269379 ]]], shape=(16, 16, 1), dtype=float32)\n"
+     ]
     }
    ],
    "source": [
-    "[1,2]+[4,5,6]"
+    "norm = tf.keras.layers.LayerNormalization(axis=1)\n",
+    "x = np.arange(256, dtype='float32').reshape((16,16,1))\n",
+    "print(norm(x))\n"
    ]
   },
   {
