--- a/test4.ipynb
+++ b/test4.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.6.9 64-bit",
+   "name": "python3",
    "display_name": "Python 3.6.9 64-bit",
    "metadata": {
     "interpreter": {
@@ -28,53 +28,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[[ 0.9756098 ,  0.9876543 ,  0.9917355 ,  0.99378884,\n",
-       "          0.99502486],\n",
-       "        [-0.9756098 , -0.9876543 , -0.9917355 , -0.99378884,\n",
-       "         -0.99502486]]], dtype=float32)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 16
-    }
-   ],
-   "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "\n",
-    "y = tf.constant([[[1, 2, 3, 4, 5],[-1,-2,-3,-4, -5]]], dtype='float32')*40\n",
-    "s = tf.math.softsign(y)\n",
-    "s.numpy()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
-       "array([[ 0.6661075 , -0.94669586, -0.77445054,  0.7149933 ],\n",
-       "       [ 0.6661075 , -0.94669586, -0.77445054,  0.7149933 ],\n",
-       "       [ 0.6661075 , -0.94669586, -0.77445054,  0.7149933 ],\n",
-       "       [ 0.6661075 , -0.94669586, -0.77445054,  0.7149933 ]],\n",
-       "      dtype=float32)>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 1
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.layers import *\n",
@@ -85,13 +41,84 @@
     "input_width = 8\n",
     "sections = int(math.log2(input_width))\n",
     "n = sections + 1\n",
-    "y = np.tile(np.arange(input_width, dtype='float32').reshape(1,8,1),(4,1,1))\n",
-    "x = [Lambda(lambda z: z[:, -(2 ** i) :, :])(y) for i in range(n)]\n",
-    "x = [AveragePooling1D(pool_size=2 ** i, strides=1)(x[i]) for i in range(n)]\n",
-    "x = Concatenate(axis=1)(x)\n",
-    "x = Flatten()(x)\n",
-    "x = Dense(4, \"softsign\")(x)\n",
-    "x"
+    "# x1 = np.tile(np.random.random(input_width*4).reshape(8),(4,1)).astype(\"float32\").round(3)\n",
+    "x1 = np.random.random(input_width*4).reshape(4,input_width).astype(\"float32\").round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(4, 1), dtype=float32, numpy=\n",
+       " array([[0.012],\n",
+       "        [0.725],\n",
+       "        [0.931],\n",
+       "        [0.345]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(4, 2), dtype=float32, numpy=\n",
+       " array([[0.259, 0.012],\n",
+       "        [0.493, 0.725],\n",
+       "        [0.541, 0.931],\n",
+       "        [0.475, 0.345]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
+       " array([[0.403, 0.877, 0.259, 0.012],\n",
+       "        [0.096, 0.909, 0.493, 0.725],\n",
+       "        [0.227, 0.997, 0.541, 0.931],\n",
+       "        [0.921, 0.006, 0.475, 0.345]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(4, 8), dtype=float32, numpy=\n",
+       " array([[0.099, 0.898, 0.09 , 0.431, 0.403, 0.877, 0.259, 0.012],\n",
+       "        [0.003, 0.877, 0.8  , 0.784, 0.096, 0.909, 0.493, 0.725],\n",
+       "        [0.155, 0.625, 0.444, 0.351, 0.227, 0.997, 0.541, 0.931],\n",
+       "        [0.211, 0.964, 0.639, 0.353, 0.921, 0.006, 0.475, 0.345]],\n",
+       "       dtype=float32)>]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "x2 = [Lambda(lambda z: z[0][:, -(2 ** z[1]) :])((x1, i)) for i in range(n)]\n",
+    "x2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[<tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.012],\n       [0.725],\n       [0.931],\n       [0.345]], dtype=float32)>, <tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.1355],\n       [0.609 ],\n       [0.736 ],\n       [0.41  ]], dtype=float32)>, <tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.38775],\n       [0.55575],\n       [0.674  ],\n       [0.43675]], dtype=float32)>, <tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.38362497],\n       [0.58587503],\n       [0.533875  ],\n       [0.48924997]], dtype=float32)>]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
+       "array([[0.012     , 0.1355    , 0.38775   , 0.38362497],\n",
+       "       [0.725     , 0.609     , 0.55575   , 0.58587503],\n",
+       "       [0.931     , 0.736     , 0.674     , 0.533875  ],\n",
+       "       [0.345     , 0.41      , 0.43675   , 0.48924997]], dtype=float32)>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "# moments = [Lambda(lambda z: tf.nn.moments(z, axes=[1], keepdims=False)[1])(x2[i]) for i in range(n)]\n",
+    "means = [Lambda(lambda z: tf.math.reduce_mean(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
+    "stds = [Lambda(lambda z: tf.math.reduce_std(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
+    "print(means)\n",
+    "Concatenate(1)(means)"
    ]
   },
   {
