spectral1(shift=4) mse_val=0.87, mae_val=0.67

--- a/test5.ipynb
+++ b/test5.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,6 +93,32 @@
     "    metrics=[MAE],\n",
     ")\n",
     "print(model.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "y_true = [[-1., 1.], [1., -1.]]\n",
+    "y_pred = [[1., -1.], [-1., 1.]]\n",
+    "# Using 'auto'/'sum_over_batch_size' reduction type.\n",
+    "\n",
+    "# mse = tf.keras.losses.MeanSquaredError(reduction=tf.keras.losses.Reduction.SUM)\n",
+    "mse = tf.keras.losses.MeanSquaredError()\n",
+    "mse(y_true, y_pred).numpy()\n"
    ]
   },
   {
