--- a/test4.ipynb
+++ b/test4.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,30 +55,30 @@
      "data": {
       "text/plain": [
        "[<tf.Tensor: shape=(4, 1), dtype=float32, numpy=\n",
-       " array([[0.012],\n",
-       "        [0.725],\n",
-       "        [0.931],\n",
-       "        [0.345]], dtype=float32)>,\n",
+       " array([[0.641],\n",
+       "        [0.847],\n",
+       "        [0.788],\n",
+       "        [0.975]], dtype=float32)>,\n",
        " <tf.Tensor: shape=(4, 2), dtype=float32, numpy=\n",
-       " array([[0.259, 0.012],\n",
-       "        [0.493, 0.725],\n",
-       "        [0.541, 0.931],\n",
-       "        [0.475, 0.345]], dtype=float32)>,\n",
+       " array([[0.33 , 0.641],\n",
+       "        [0.708, 0.847],\n",
+       "        [0.713, 0.788],\n",
+       "        [0.062, 0.975]], dtype=float32)>,\n",
        " <tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
-       " array([[0.403, 0.877, 0.259, 0.012],\n",
-       "        [0.096, 0.909, 0.493, 0.725],\n",
-       "        [0.227, 0.997, 0.541, 0.931],\n",
-       "        [0.921, 0.006, 0.475, 0.345]], dtype=float32)>,\n",
+       " array([[0.119, 0.062, 0.33 , 0.641],\n",
+       "        [0.487, 0.477, 0.708, 0.847],\n",
+       "        [0.186, 0.398, 0.713, 0.788],\n",
+       "        [0.31 , 0.596, 0.062, 0.975]], dtype=float32)>,\n",
        " <tf.Tensor: shape=(4, 8), dtype=float32, numpy=\n",
-       " array([[0.099, 0.898, 0.09 , 0.431, 0.403, 0.877, 0.259, 0.012],\n",
-       "        [0.003, 0.877, 0.8  , 0.784, 0.096, 0.909, 0.493, 0.725],\n",
-       "        [0.155, 0.625, 0.444, 0.351, 0.227, 0.997, 0.541, 0.931],\n",
-       "        [0.211, 0.964, 0.639, 0.353, 0.921, 0.006, 0.475, 0.345]],\n",
+       " array([[0.705, 0.178, 0.611, 0.6  , 0.119, 0.062, 0.33 , 0.641],\n",
+       "        [0.313, 0.294, 0.181, 0.842, 0.487, 0.477, 0.708, 0.847],\n",
+       "        [0.441, 0.721, 0.184, 0.138, 0.186, 0.398, 0.713, 0.788],\n",
+       "        [0.458, 0.203, 0.51 , 0.445, 0.31 , 0.596, 0.062, 0.975]],\n",
        "       dtype=float32)>]"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 4
     }
    ],
    "source": [
@@ -88,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[<tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.012],\n       [0.725],\n       [0.931],\n       [0.345]], dtype=float32)>, <tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.1355],\n       [0.609 ],\n       [0.736 ],\n       [0.41  ]], dtype=float32)>, <tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.38775],\n       [0.55575],\n       [0.674  ],\n       [0.43675]], dtype=float32)>, <tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.38362497],\n       [0.58587503],\n       [0.533875  ],\n       [0.48924997]], dtype=float32)>]\n"
+      "[<tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.],\n       [0.],\n       [0.],\n       [0.]], dtype=float32)>, <tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.31099996],\n       [0.139     ],\n       [0.07499999],\n       [0.91300005]], dtype=float32)>, <tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.579     ],\n       [0.37      ],\n       [0.602     ],\n       [0.91300005]], dtype=float32)>, <tf.Tensor: shape=(4, 1), dtype=float32, numpy=\narray([[0.643     ],\n       [0.666     ],\n       [0.65      ],\n       [0.91300005]], dtype=float32)>]\n"
      ]
     },
     {
@@ -103,22 +103,62 @@
      "data": {
       "text/plain": [
        "<tf.Tensor: shape=(4, 4), dtype=float32, numpy=\n",
-       "array([[0.012     , 0.1355    , 0.38775   , 0.38362497],\n",
-       "       [0.725     , 0.609     , 0.55575   , 0.58587503],\n",
-       "       [0.931     , 0.736     , 0.674     , 0.533875  ],\n",
-       "       [0.345     , 0.41      , 0.43675   , 0.48924997]], dtype=float32)>"
+       "array([[0.641     , 0.48549998, 0.288     , 0.40574998],\n",
+       "       [0.847     , 0.77750003, 0.62975   , 0.518625  ],\n",
+       "       [0.788     , 0.75049996, 0.52125   , 0.44612503],\n",
+       "       [0.975     , 0.51850003, 0.48575002, 0.444875  ]], dtype=float32)>"
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 5
     }
    ],
    "source": [
     "# moments = [Lambda(lambda z: tf.nn.moments(z, axes=[1], keepdims=False)[1])(x2[i]) for i in range(n)]\n",
     "means = [Lambda(lambda z: tf.math.reduce_mean(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
     "stds = [Lambda(lambda z: tf.math.reduce_std(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
-    "print(means)\n",
+    "R = [Lambda(lambda z: tf.math.reduce_max(z,1, keepdims=True)-tf.math.reduce_min(z,1, keepdims=True))(x2[i]) for i in range(n)]\n",
+    "print(R)\n",
     "Concatenate(1)(means)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "a = np.arange(8, dtype=\"float32\").reshape(2,4)\n",
+    "c = np.ones((2,3,4), dtype=\"float32\")\n",
+    "x = tf.reshape(a, (a.shape[0], 1, a.shape[1]))\n",
+    "x = tf.tile(x,[1,3,1])\n",
+    "x = tf.subtract(x, c)\n",
+    "x = tf.multiply(x, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3), dtype=float32, numpy=\n",
+       "array([[ -6.,  -6.,  -6.],\n",
+       "       [-86., -86., -86.]], dtype=float32)>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "x = -tf.reduce_sum(x, 2)\n",
+    "x"
    ]
   },
   {
