--- a/test3.ipynb
+++ b/test3.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,23 +172,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([1, 1, 1])"
+       "<tf.Tensor: shape=(2, 4, 4), dtype=float32, numpy=\n",
+       "array([[[ 0.,  1., 10., 11.],\n",
+       "        [ 2.,  3., 12., 13.],\n",
+       "        [ 4.,  5., 14., 15.],\n",
+       "        [ 6.,  7., 16., 17.]],\n",
+       "\n",
+       "       [[ 8.,  9., 18., 19.],\n",
+       "        [10., 11., 20., 21.],\n",
+       "        [12., 13., 22., 23.],\n",
+       "        [14., 15., 24., 25.]]], dtype=float32)>"
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 16
     }
    ],
    "source": [
-    "x = np.array([1,2,3,4])\n",
-    "x[1:]-x[:-1]"
+    "x = np.arange(16, dtype=\"float32\").reshape(2,4,2)\n",
+    "y = np.arange(16, dtype=\"float32\").reshape(2,4,2)+10\n",
+    "a = tf.keras.layers.Concatenate(axis=2)([x,y])\n",
+    "a"
    ]
   },
   {
