--- a/test3.ipynb
+++ b/test3.ipynb
@@ -47,7 +47,13 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Размер train: 44196\nРазмер validation: 5524\nРазмер test: 5526\nРазмер окна: 1026\nРазмер входа: 1024\nРазмер выхода: 2\nИндексы входа: [   0    1    2 ... 1021 1022 1023]\nИндексы выхода: [1024 1025]\n"
+      "Размер train: 29380\n",
+      "Размер validation: 3672\n",
+      "Размер test: 3672\n",
+      "Размер окна: 1026\n",
+      "Размер входа: 1024\n",
+      "Размер выхода: 2\n",
+      "<class 'tensorflow.python.keras.engine.functional.Functional'>\n"
      ]
     }
    ],
@@ -56,7 +62,7 @@
     "label_width = 2\n",
     "shift =2\n",
     "sections = int(math.log2(input_width))\n",
-    "model = \"models/spectral2-2\"\n",
+    "model = \"models/boost16-256-1\"\n",
     "# model = dense_model((input_width, sample_width), units=2 ** 12, sections=sections)\n",
     "predictor = Predictor(\"datas/EURUSD_H1 copy 3.csv\", model,\n",
     "    input_width=input_width,\n",
@@ -66,7 +72,8 @@
     "    val_ratio=0.1,\n",
     "    test_ratio=0.1,\n",
     "    batch_size=256,\n",
-    ")"
+    ")\n",
+    "print(type(predictor.model))"
    ]
   },
   {
