--- a/test3.ipynb
+++ b/test3.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,8 @@
     "# r = predictor.predict(prices)\n",
     "# for i in range(1,r.shape[0]-shift):\n",
     "#     idx_first = i+predictor.dataloader.input_width\n",
-    "#     idx_last = i+predictor.dataloader.input_width+shift    \n",
+    "#     idx_last = i+predictor.dataloader.input_width+shift        inputs = Input(shape=(input_width,))\n",
+    "\n",
     "#     plt.plot(t[idx_first:idx_last], r[i:i+shift], marker='x')\n",
     "#     plt.plot(t[idx_first:idx_last], inputs[idx_first:idx_last], marker='o')\n",
     "# plt.plot(t[predictor.dataloader.input_width:], np.zeros(len(t)-predictor.dataloader.input_width))"
@@ -169,6 +170,51 @@
     "std = (np.array(df['open'][1:])-np.array(df['open'][:-1])).std()\n",
     "mean = (np.array(df['open'][1:])-np.array(df['open'][:-1])).mean()\n",
     "print(round(std*2,5), round(mean*2,7))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[array([0, 1, 2, 3, 4]), array([5, 6, 7, 8, 9])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "r = np.arange(10).reshape(2,5)\n",
+    "k = [i for i in r]\n",
+    "print(k)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-e63b7fd493d7>, line 4)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-e63b7fd493d7>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    seq_u1 =for m in u1:\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Activation, Input, Concatenate\n",
+    "u1 = [Input(shape), Dense(32),Activation(\"relu\"),Dense(10),Activation(\"softmax\")]\n",
+    "x = \n",
+    "seq_u1 = (for m in u1:\n",
+    "    x = m(x)\n",
+    "\n",
+    "print(seq_u1)"
    ]
   },
   {
