!scored_dense fixed

--- a/test3.ipynb
+++ b/test3.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,40 +207,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ClippedCSE(tf.keras.losses.Loss):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        value_min=-1.0,\n",
+    "        value_max=1.0,\n",
+    "        count=8,\n",
+    "        reduction=tf.keras.losses.Reduction.AUTO,\n",
+    "        name=\"clipped_cse\",\n",
+    "    ) -> None:\n",
+    "        super().__init__(reduction=reduction, name=name)\n",
+    "        self.value_min = value_min\n",
+    "        self.value_max = value_max\n",
+    "        self.count = count\n",
+    "        self.step = (self.count - 1) / (self.value_max - self.value_min)\n",
+    "\n",
+    "    def call(self, y_true, y_pred):\n",
+    "        clipped_y_pred = tf.clip_by_value(y_pred, self.value_min, self.value_max)\n",
+    "        clipped_y_true = tf.clip_by_value(y_true, self.value_min, self.value_max)\n",
+    "        # n_pred = (clipped_y_pred - self.value_min) * self.step\n",
+    "        indices = ((clipped_y_true - value_min) * step).numpy().astype(int).flatten()\n",
+    "        indices = indices.reshape((y_true.shape[0],))\n",
+    "        y_true_batch = tf.zeros_like(y_pred).numpy()\n",
+    "        y_true_batch[np.arange(y_pred.shape[0]), indices] = 1.0\n",
+    "        return tf.losses.cosine_similarity(y_true_batch, clipped_y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7]\n"
+      "[0 1 3]\n[[1. 0. 0. 0.]\n [0. 1. 0. 0.]\n [0. 0. 0. 1.]]\n[-1.         -0.         -0.70710677]\n"
      ]
     }
    ],
    "source": [
-    "a = [1,2,3,4,5,6,7,8]\n",
-    "print(a[:-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 1
-    }
-   ],
-   "source": [
-    "[1,1,1,1]*4"
+    "count = 4\n",
+    "value_max = 4\n",
+    "value_min = -4\n",
+    "step = (count - 1) / (value_max - value_min)\n",
+    "y_true = tf.constant([[-4.], [0.], [4.]])\n",
+    "y_pred = tf.constant([[1., 0, 0, 0], [0., 0, 1., 0], [1., 0, 0, 1]])\n",
+    "clipped_y_pred = tf.clip_by_value(y_pred, value_min, value_max)\n",
+    "clipped_y_true = tf.clip_by_value(y_true, value_min, value_max)\n",
+    "indices = ((clipped_y_true - value_min) * step).numpy().astype(int).flatten()\n",
+    "\n",
+    "y_true_batch = tf.zeros_like(y_pred).numpy()\n",
+    "y_true_batch[np.arange(y_pred.shape[0]), indices] = 1.0\n",
+    "print(indices)\n",
+    "print(y_true_batch)\n",
+    "print(tf.losses.cosine_similarity(y_true_batch, clipped_y_pred).numpy())"
    ]
   },
   {
